decaf-compiler/samples/lex/number.decaf.out

*** Error line 2.
1
^
*** syntax error

